raffia/tests/error/scss/at-rule/forward/hide-invalid.snap
---
source: raffia/tests/error.rs
---
error: expect token `$var`, but found `<number>`
  ┌─ hide-invalid.scss:1:19
  │
1 │ @forward "a" hide 1;
  │                   ^


